syntax = 'proto3';

package arpc_protocol;

// The ARPC wire format.

enum StatusCode {
  OK = 0;
  CANCELLED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  UNAUTHENTICATED = 8;
  RESOURCE_EXHAUSTED = 9;
  FAILED_PRECONDITION = 10;
  ABORTED = 11;
  OUT_OF_RANGE = 12;
  UNIMPLEMENTED = 13;
  INTERNAL = 14;
  UNAVAILABLE = 15;
  DATA_LOSS = 16;
}

message Status {
  StatusCode code = 1;
  string message = 2;
}

// Messages sent from clients to servers.

message RpcMethod {
  string service = 1;
  string rpc = 2;
}

message UnaryRequest {
  RpcMethod rpc_method = 1;
  // TODO(ed): Also have the payload in here?
}

message ClientMessage {
  UnaryRequest unary_request = 1;
}

// Messages sent from servers to clients.

message UnaryResponse {
  Status status = 1;
}

message ServerMessage {
  UnaryResponse unary_response = 1;
}
